# mean_field

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  b0_julia_port_audit.md  benchmark_strategy.md  cleanup_plan_next.md  conventions.md  htg_band_spike_diagnosis_20260502.md  htg_fig7_physics_audit_20260501.md  julia_to_python_map.md  mean_field_code_review_report.md  polshyn2021_figs1abc_reproduction_plan.md  production_validation_backlog.md  refactor_surface_report.json  refactor_surface_report.md  script_surface_policy.md  tdhf_core_contract.md  tmbg_checkpoint_execution.md  tmbg_hf_followup_plan.md  topology_framework.md
reports/: rlg_hbn_chern_mismatch_status_20260528.md  rlg_hbn_code_audit_c0_20260601.md  rlg_hbn_hf_open_source_references.md  rlg_hbn_reduce_flavor_tasks_20260601.md  rlg_hbn_vs_r5g_ahc_diagnosis.md  tbg_crpa_code_reference_comparison_20260527.md  tbg_crpa_dielectric_failure_20260530.md  tbg_crpa_fock_invdiag_shell_tests_20260527.md  tbg_finite_field_module_port_validation_20260607.md  tbg_hf_crpa_external_references_20260527.md  tbg_hf_open_source_reproduction_20260527.md  zhang_fig4_hf_crpa_reproduction.md
scripts/: AGENTS.md  analyze_htg_fig9b_seed_convergence.py  compare_crpa_epsilon_curves.py  compute_completed_rlg_fig6_task_chern.sbatch  compute_polshyn_hf_chern.py  compute_rlg_hbn_hf_active_band_chern_table.py  compute_rlg_hbn_hf_chern.py  compute_rlg_hbn_hf_sector_chern_table.py  diagnose_crpa_remote_bare_components.py  diagnose_crpa_remote_bare_from_states.py  diagnose_rlg_hbn_active_window.py  line_budget.py  (+188 more)
(+567 files in other folders)
