[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mean-field"
version = "0.1.0"
description = "Python rewrite of the mean-field TBG workflow with benchmark-driven validation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ziyu Zhu" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
perf = [
  "numba>=0.59",
]

[project.scripts]
mean-field = "mean_field.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "slow: tests that run expensive numerical checkpoint calculations",
]
